# bb-deployments

bare/: BUILD.bazel
bare/config/: BUILD.bazel
kubernetes-jsonnet/: BUILD.bazel  browser.libsonnet  browser_test.jsonnet  buildbarn.libsonnet  common_configmap.libsonnet  frontend.libsonnet  frontend_test.jsonnet
