load("@io_bazel_rules_jsonnet//jsonnet:jsonnet.bzl", "jsonnet_library", "jsonnet_to_json_test")

filegroup(
    name = "jsonnet",
    srcs = glob([
        "**/*.libsonnet",
        "**/*.jsonnet",
    ]),
    visibility = ["//visibility:public"],
)

jsonnet_library(
    name = "kubernetes-jsonnet",
    srcs = [":jsonnet"],
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = ["//bare/config"],
)

[jsonnet_to_json_test(
    name = "%s_test" % component,
    src = "%s_test.jsonnet" % component,
    deps = [":kubernetes-jsonnet"],
) for component in [
    "browser",
    "frontend",
]]
